finish Pos labeling

--- a/EnglishToIPA/dict/generateDict.ipynb
+++ b/EnglishToIPA/dict/generateDict.ipynb
@@ -34,7 +34,7 @@
     "    phonemes = ipa.convert(line)\n",
     "    for char in ignoreChars:\n",
     "        phonemes = phonemes.replace(char, '')\n",
-    "    if(phonemes[0] not in dictionary.keys()):\n",
+    "    if phonemes[0] not in dictionary.keys():\n",
     "        dictionary[phonemes[0]] = list()\n",
     "    dictionary[phonemes[0]].append(line)"
    ]
@@ -56,6 +56,31 @@
    "outputs": [],
    "source": [
     "df = pd.read_pickle(\"wordPhonemeDict.pickle\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['abandoned', 'abilities', 'ability', 'abortion', 'about', 'above', 'abroad', 'absorption', 'abuse', 'academy', 'accept', 'acceptable', 'acceptance', 'accepting', 'accommodate', 'accommodation', 'accommodations', 'accompanied', 'accompanying', 'accomplish', 'accomplished', 'accordance', 'according', 'accordingly', 'account', 'accountability', 'accounting', 'accounts', 'accreditation', 'accredited', 'accused', 'achieve', 'achieved', 'achievement', 'achievements', 'achieving', 'acoustic', 'acquire', 'acquired', 'across']\n",
+      "['able', 'abraham', 'acer', 'acre', 'acres', 'adrian', 'aged', 'agencies', 'agency', 'agent', 'agents', 'ages', 'aging', 'aids', 'aimed', 'aims', 'alias', 'alien', 'anal', 'ancient', 'angel', 'angels', 'april', 'asia', 'asian', 'aviation', 'avon', 'ebook', 'ebooks', 'ecommerce', 'eight', 'emacs', 'eminem', 'endif', 'enquiries', 'epinions', 'epinionscom', 'espn', 'eval', 'expansys']\n",
+      "['babe', 'babes', 'babies', 'baby', 'bachelor', 'back', 'backed', 'background', 'backgrounds', 'backing', 'backup', 'bacon', 'bacteria', 'bacterial', 'badge', 'badly', 'baghdad', 'bags', 'bahamas', 'bahrain', 'bailey', 'baker', 'baking', 'balance', 'balanced', 'bald', 'bali', 'ball', 'ballet', 'balloon', 'ballot', 'balls', 'baltimore', 'banana', 'band', 'bands', 'bandwidth', 'bang', 'bangbus', 'bangkok']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# test = list()\n",
+    "# test.append(ipa.convert(Lines[0])[0])\n",
+    "# test.append(ipa.convert(Lines[1])[0])\n",
+    "# test.append(ipa.convert(Lines[8])[2])\n",
+    "# print(dictionary[test[0]][0:40])\n",
+    "# print(dictionary[test[1]][0:40])\n",
+    "# print(dictionary[test[2]][0:40])"
    ]
   },
   {
