--- a/NER/test.ipynb
+++ b/NER/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,20 +34,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('modifiableWords.pickle', 'wb') as handle:\n",
+    "    pickle.dump(modifiableWords, handle, protocol=pickle.HIGHEST_PROTOCOL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "for paragraph in paragraphs:\n",
     "    labeledParagraph = list()\n",
     "    for token in nlp(paragraph):\n",
+    "        # if token.pos_ == \"NOUN\" || token.pos_ == \"PROPN\"\n",
     "        labeledParagraph.append([token.text, token.pos_])\n",
     "    labeledParagraphs.append(labeledParagraph)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(labeledParagraphs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,6 +94,7 @@
     "for phoneme in wordPhonemeDict:\n",
     "    for word in wordPhonemeDict[phoneme]:\n",
     "        token = nlp(word)[0]\n",
+    "        # print(token.text, token.ent_type_)\n",
     "        if (token.pos_, phoneme) not in wordPosPhonemeDict.keys():\n",
     "            wordPosPhonemeDict[(token.pos_, phoneme)] = list()\n",
     "        wordPosPhonemeDict[(token.pos_, phoneme)].append(word)"
@@ -81,12 +102,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('wordPosPhonemeDict.pickle', 'wb') as handle:\n",
     "    pickle.dump(wordPosPhonemeDict, handle, protocol=pickle.HIGHEST_PROTOCOL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(wordPosPhonemeDict)"
    ]
   },
   {
