--- a/NER/test.ipynb
+++ b/NER/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,30 +44,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "for paragraph in paragraphs:\n",
     "    labeledParagraph = list()\n",
     "    for token in nlp(paragraph):\n",
-    "        # if token.pos_ == \"NOUN\" || token.pos_ == \"PROPN\"\n",
+    "        if token.pos_ == \"NOUN\" or token.pos_ == \"PROPN\":\n",
+    "            if token.ent_type_ != \"\":\n",
+    "                labeledParagraph.append([token.text, token.ent_type_])\n",
+    "                continue\n",
     "        labeledParagraph.append([token.text, token.pos_])\n",
     "    labeledParagraphs.append(labeledParagraph)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(labeledParagraphs)"
+    "# print(labeledParagraphs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,14 +98,19 @@
     "    for word in wordPhonemeDict[phoneme]:\n",
     "        token = nlp(word)[0]\n",
     "        # print(token.text, token.ent_type_)\n",
-    "        if (token.pos_, phoneme) not in wordPosPhonemeDict.keys():\n",
-    "            wordPosPhonemeDict[(token.pos_, phoneme)] = list()\n",
-    "        wordPosPhonemeDict[(token.pos_, phoneme)].append(word)"
+    "        pos = token.pos_\n",
+    "        if pos == \"NOUN\" or pos == \"PROPN\":\n",
+    "            if token.ent_type_ != \"\":\n",
+    "                pos = token.ent_type_\n",
+    "        labeledParagraph.append([token.text, pos])\n",
+    "        if (pos, phoneme) not in wordPosPhonemeDict.keys():\n",
+    "            wordPosPhonemeDict[(pos, phoneme)] = list()\n",
+    "        wordPosPhonemeDict[(pos, phoneme)].append(word)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,11 +120,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(wordPosPhonemeDict)"
+    "# print(wordPosPhonemeDict)"
    ]
   },
   {
