--- a/NER/test.ipynb
+++ b/NER/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for paragraph in paragraphs:\n",
+    "    labeledParagraph = list()\n",
+    "    for token in nlp(paragraph):\n",
+    "        if token.pos_ == \"NOUN\" or token.pos_ == \"PROPN\":\n",
+    "            if token.ent_type_ != \"\":\n",
+    "                if token.ent_type_ not in modifiableWords:\n",
+    "                    modifiableWords.add(token.ent_type_)\n",
+    "                labeledParagraph.append([token.text, token.ent_type_])\n",
+    "                continue\n",
+    "        labeledParagraph.append([token.text, token.pos_])\n",
+    "    labeledParagraphs.append(labeledParagraph)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,24 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for paragraph in paragraphs:\n",
-    "    labeledParagraph = list()\n",
-    "    for token in nlp(paragraph):\n",
-    "        if token.pos_ == \"NOUN\" or token.pos_ == \"PROPN\":\n",
-    "            if token.ent_type_ != \"\":\n",
-    "                labeledParagraph.append([token.text, token.ent_type_])\n",
-    "                continue\n",
-    "        labeledParagraph.append([token.text, token.pos_])\n",
-    "    labeledParagraphs.append(labeledParagraph)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
