--- a/NER/test.ipynb
+++ b/NER/test.ipynb
@@ -41,7 +41,7 @@
     "for paragraph in paragraphs:\n",
     "    labeledParagraph = list()\n",
     "    for token in nlp(paragraph):\n",
-    "        if token.pos_ == \"NOUN\" or token.pos_ == \"PROPN\":\n",
+    "        if token.pos_ == \"NOUNz\" or token.pos_ == \"PROPN\":\n",
     "            if token.ent_type_ != \"\":\n",
     "                if token.ent_type_ not in modifiableWords:\n",
     "                    modifiableWords.add(token.ent_type_)\n",
